totally restructured EditMode, split up into EditOperation and EditOperationStep classes to nicely separate everything from each other. Now it is much better to handle and it - again - makes much more sense as ever before!

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ HistoGlobe_client/config/full
 HistoGlobe_client/build
 HistoGlobe_client/script/histoglobe.min.js
 HistoGlobe_client/style/histoglobe.min.css
+
+### SAMPLE FILE
+HistoGlobe_client/script/util/EmptyClass.coffee
